@@ -17,12 +17,8 @@
 package com.linkedin.pegasus.generator.test;
 
 import com.linkedin.data.ByteString;
-import com.linkedin.data.Data;
-import com.linkedin.data.DataComplex;
-import com.linkedin.data.DataList;
 import com.linkedin.data.DataMap;
 import com.linkedin.data.TestUtil;
-import com.linkedin.data.schema.PathSpec;
 import com.linkedin.data.schema.RecordDataSchema;
 import com.linkedin.data.template.DataTemplate;
 import com.linkedin.data.template.DataTemplateUtil;
@@ -34,7 +30,6 @@ import java.io.IOException;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.util.Arrays;
-import java.util.List;
 import org.testng.annotations.Test;
 
 import com.linkedin.data.template.GetMode;
@@ -218,16 +213,12 @@ public class TestRecord
   {
     try
     {
-      T record = recordClass.newInstance();
+      T record = recordClass.getDeclaredConstructor().newInstance();
       RecordDataSchema schema = (RecordDataSchema) DataTemplateUtil.getSchema(recordClass);
       RecordDataSchema schema2 = record.schema();
       assertSame(schema, schema2);
     }
-    catch (IllegalAccessException exc)
-    {
-      fail("Unexpected exception", exc);
-    }
-    catch (InstantiationException exc)
+    catch (IllegalAccessException | InstantiationException | InvocationTargetException | NoSuchMethodException exc)
     {
       fail("Unexpected exception", exc);
     }
@@ -292,11 +283,11 @@ public class TestRecord
       },
       {
         "arrayField",
-        new IntegerArray(new DataList(Arrays.asList(1, 2, 3, 4, 5)))
+        new IntegerArray(Arrays.asList(1, 2, 3, 4, 5))
       },
       {
         "mapField",
-        new StringMap(new DataMap(TestUtil.asMap("k1", "v1", "k2", "v2", "k3", "v3")))
+        new StringMap(TestUtil.asMap("k1", "v1", "k2", "v2", "k3", "v3"))
       },
       {
         "unionField",
