@@ -21,17 +21,37 @@ import com.linkedin.r2.filter.R2Constants;
 import com.linkedin.r2.message.RequestContext;
 import com.linkedin.r2.message.rest.RestRequest;
 import com.linkedin.r2.message.rest.RestRequestBuilder;
-import com.linkedin.restli.common.*;
+import com.linkedin.restli.common.ComplexResourceKey;
+import com.linkedin.restli.common.CompoundKey;
+import com.linkedin.restli.common.HttpStatus;
+import com.linkedin.restli.common.PatchRequest;
+import com.linkedin.restli.common.ProtocolVersion;
+import com.linkedin.restli.common.ResourceMethod;
+import com.linkedin.restli.common.RestConstants;
+import com.linkedin.restli.common.attachments.RestLiAttachmentReader;
 import com.linkedin.restli.internal.common.AllProtocolVersions;
 import com.linkedin.restli.internal.common.TestConstants;
+import com.linkedin.restli.internal.server.PathKeysImpl;
+import com.linkedin.restli.internal.server.ResourceContextImpl;
 import com.linkedin.restli.internal.server.RestLiRouter;
-import com.linkedin.restli.internal.server.RoutingResult;
+import com.linkedin.restli.internal.server.ServerResourceContext;
 import com.linkedin.restli.internal.server.model.ResourceMethodDescriptor;
 import com.linkedin.restli.internal.server.model.ResourceModel;
+import com.linkedin.restli.internal.server.util.RestLiSyntaxException;
 import com.linkedin.restli.server.PathKeys;
+import com.linkedin.restli.server.RestLiConfig;
 import com.linkedin.restli.server.RoutingException;
 import com.linkedin.restli.server.combined.CombinedResources;
-import com.linkedin.restli.server.twitter.*;
+import com.linkedin.restli.server.twitter.CustomStatusCollectionResource;
+import com.linkedin.restli.server.twitter.DiscoveredItemsResource;
+import com.linkedin.restli.server.twitter.FollowsAssociativeResource;
+import com.linkedin.restli.server.twitter.LocationResource;
+import com.linkedin.restli.server.twitter.RepliesCollectionResource;
+import com.linkedin.restli.server.twitter.StatusCollectionResource;
+import com.linkedin.restli.server.twitter.TrendRegionsCollectionResource;
+import com.linkedin.restli.server.twitter.TrendingResource;
+import com.linkedin.restli.server.twitter.TwitterAccountsResource;
+import com.linkedin.restli.server.twitter.TwitterTestDataModels;
 import com.linkedin.restli.server.twitter.TwitterTestDataModels.Status;
 import com.linkedin.restli.server.twitter.TwitterTestDataModels.Trending;
 
@@ -42,11 +62,16 @@ import java.util.HashSet;
 import java.util.Map;
 import java.util.Set;
 
+import org.testng.Assert;
 import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
 
 import static com.linkedin.restli.server.test.RestLiTestHelper.buildResourceModels;
-import static org.testng.Assert.*;
+import static org.testng.Assert.assertEquals;
+import static org.testng.Assert.assertNotNull;
+import static org.testng.Assert.assertNull;
+import static org.testng.Assert.assertTrue;
+import static org.testng.Assert.fail;
 
 
 /**
@@ -70,15 +95,14 @@ public class TestRestLiRouting
   public void testRoutingDetailsCollectionGet(ProtocolVersion version, String uri) throws Exception
   {
     Map<String, ResourceModel> pathRootResourceMap = buildResourceModels(StatusCollectionResource.class);
-    _router = new RestLiRouter(pathRootResourceMap);
+    _router = new RestLiRouter(pathRootResourceMap, new RestLiConfig());
 
     // #1 simple GET
     RestRequest request = createRequest(uri, "GET", version);
 
-    RoutingResult result = _router.process(request, new RequestContext());
-    assertNotNull(result);
+    ServerResourceContext context = new ResourceContextImpl(new PathKeysImpl(), request, new RequestContext());
 
-    ResourceMethodDescriptor resourceMethodDescriptor = result.getResourceMethod();
+    ResourceMethodDescriptor resourceMethodDescriptor = _router.process(context);
     assertNotNull(resourceMethodDescriptor);
     assertEquals(resourceMethodDescriptor.getType(), ResourceMethod.GET);
     assertNull(resourceMethodDescriptor.getActionName());
@@ -88,9 +112,8 @@ public class TestRestLiRouting
     assertEquals(resourceMethodDescriptor.getMethod().getParameterTypes(), new Class<?>[] {Long.class});
     assertEquals(resourceMethodDescriptor.getResourceModel().getName(), "statuses");
 
-    assertNotNull(result.getContext());
-    PathKeys keys = result.getContext().getPathKeys();
-    assertEquals(keys.getAsLong("statusID"), new Long(1));
+    PathKeys keys = context.getPathKeys();
+    assertEquals(keys.getAsLong("statusID"), Long.valueOf(1));
     assertNull(keys.getAsString("foo"));
   }
 
@@ -108,14 +131,13 @@ public class TestRestLiRouting
   public void testRoutingDetailsAssociationGet(ProtocolVersion version, String uri) throws Exception
   {
     Map<String, ResourceModel> pathRootResourceMap = buildResourceModels(FollowsAssociativeResource.class);
-    _router = new RestLiRouter(pathRootResourceMap);
+    _router = new RestLiRouter(pathRootResourceMap, new RestLiConfig());
 
     RestRequest request = createRequest(uri, "GET", version);
 
-    RoutingResult result = _router.process(request, new RequestContext());
-    assertNotNull(result);
+    ServerResourceContext context = new ResourceContextImpl(new PathKeysImpl(), request, new RequestContext());
 
-    ResourceMethodDescriptor resourceMethodDescriptor = result.getResourceMethod();
+    ResourceMethodDescriptor resourceMethodDescriptor = _router.process(context);
     assertNotNull(resourceMethodDescriptor);
     assertEquals(resourceMethodDescriptor.getType(), ResourceMethod.GET);
     assertNull(resourceMethodDescriptor.getActionName());
@@ -125,24 +147,22 @@ public class TestRestLiRouting
     assertEquals(resourceMethodDescriptor.getMethod().getParameterTypes(), new Class<?>[] {CompoundKey.class});
     assertEquals(resourceMethodDescriptor.getResourceModel().getName(), "follows");
 
-    assertNotNull(result.getContext());
-    PathKeys keys = result.getContext().getPathKeys();
-    assertEquals(keys.getAsLong("followerID"), new Long(1L));
-    assertEquals(keys.getAsLong("followeeID"), new Long(2L));
+    PathKeys keys = context.getPathKeys();
+    assertEquals(keys.getAsLong("followerID"), Long.valueOf(1L));
+    assertEquals(keys.getAsLong("followeeID"), Long.valueOf(2L));
   }
 
   @Test(dataProvider = TestConstants.RESTLI_PROTOCOL_1_2_PREFIX + "routingDetailsCollectionEntity")
   public void testRoutingDetailsCollectionUpdate(ProtocolVersion version, String uri) throws Exception
   {
     Map<String, ResourceModel> pathRootResourceMap = buildResourceModels(StatusCollectionResource.class);
-    _router = new RestLiRouter(pathRootResourceMap);
+    _router = new RestLiRouter(pathRootResourceMap, new RestLiConfig());
 
     RestRequest request = createRequest(uri, "PUT", version);
 
-    RoutingResult result = _router.process(request, new RequestContext());
-    assertNotNull(result);
+    ServerResourceContext context = new ResourceContextImpl(new PathKeysImpl(), request, new RequestContext());
 
-    ResourceMethodDescriptor resourceMethodDescriptor = result.getResourceMethod();
+    ResourceMethodDescriptor resourceMethodDescriptor = _router.process(context);
     assertNotNull(resourceMethodDescriptor);
     assertEquals(resourceMethodDescriptor.getType(), ResourceMethod.UPDATE);
     assertNull(resourceMethodDescriptor.getActionName());
@@ -152,9 +172,8 @@ public class TestRestLiRouting
     assertEquals(resourceMethodDescriptor.getMethod().getParameterTypes(), new Class<?>[] { Long.class, Status.class });
     assertEquals(resourceMethodDescriptor.getResourceModel().getName(), "statuses");
 
-    assertNotNull(result.getContext());
-    PathKeys keys = result.getContext().getPathKeys();
-    assertEquals(keys.getAsLong("statusID"), new Long(1));
+    PathKeys keys = context.getPathKeys();
+    assertEquals(keys.getAsLong("statusID"), Long.valueOf(1));
     assertNull(keys.getAsString("foo"));
   }
 
@@ -162,14 +181,13 @@ public class TestRestLiRouting
   public void testRoutingDetailsCollectionDelete(ProtocolVersion version, String uri) throws Exception
   {
     Map<String, ResourceModel> pathRootResourceMap = buildResourceModels(StatusCollectionResource.class);
-    _router = new RestLiRouter(pathRootResourceMap);
+    _router = new RestLiRouter(pathRootResourceMap, new RestLiConfig());
 
     RestRequest request = createRequest(uri, "DELETE", version);
 
-    RoutingResult result = _router.process(request, new RequestContext());
-    assertNotNull(result);
+    ServerResourceContext context = new ResourceContextImpl(new PathKeysImpl(), request, new RequestContext());
 
-    ResourceMethodDescriptor resourceMethodDescriptor = result.getResourceMethod();
+    ResourceMethodDescriptor resourceMethodDescriptor = _router.process(context);
     assertNotNull(resourceMethodDescriptor);
     assertEquals(resourceMethodDescriptor.getType(), ResourceMethod.DELETE);
     assertNull(resourceMethodDescriptor.getActionName());
@@ -179,9 +197,8 @@ public class TestRestLiRouting
     assertEquals(resourceMethodDescriptor.getMethod().getParameterTypes(), new Class<?>[] { Long.class });
     assertEquals(resourceMethodDescriptor.getResourceModel().getName(), "statuses");
 
-    assertNotNull(result.getContext());
-    PathKeys keys = result.getContext().getPathKeys();
-    assertEquals(keys.getAsLong("statusID"), new Long(1));
+    PathKeys keys = context.getPathKeys();
+    assertEquals(keys.getAsLong("statusID"), Long.valueOf(1));
     assertNull(keys.getAsString("foo"));
   }
 
@@ -199,14 +216,13 @@ public class TestRestLiRouting
   public void testRoutingDetailsAssociationBatchGet(ProtocolVersion version, String uri) throws Exception
   {
     Map<String, ResourceModel> pathRootResourceMap = buildResourceModels(FollowsAssociativeResource.class);
-    _router = new RestLiRouter(pathRootResourceMap);
+    _router = new RestLiRouter(pathRootResourceMap, new RestLiConfig());
 
     RestRequest request = createRequest(uri, "GET", version);
 
-    RoutingResult result = _router.process(request, new RequestContext());
-    assertNotNull(result);
+    ServerResourceContext context = new ResourceContextImpl(new PathKeysImpl(), request, new RequestContext());
 
-    ResourceMethodDescriptor resourceMethodDescriptor = result.getResourceMethod();
+    ResourceMethodDescriptor resourceMethodDescriptor = _router.process(context);
     assertNotNull(resourceMethodDescriptor);
     assertEquals(resourceMethodDescriptor.getType(), ResourceMethod.BATCH_GET);
     assertNull(resourceMethodDescriptor.getActionName());
@@ -216,8 +232,7 @@ public class TestRestLiRouting
     assertEquals(resourceMethodDescriptor.getMethod().getParameterTypes(), new Class<?>[] {Set.class});
     assertEquals(resourceMethodDescriptor.getResourceModel().getName(), "follows");
 
-    assertNotNull(result.getContext());
-    PathKeys keys = result.getContext().getPathKeys();
+    PathKeys keys = context.getPathKeys();
     assertNull(keys.getAsString("followerID"));
     assertNull(keys.getAsString("followeeID"));
 
@@ -227,7 +242,7 @@ public class TestRestLiRouting
     CompoundKey key2 = new CompoundKey();
     key2.append("followerID", 3L);
     key2.append("followeeID", 4L);
-    Set<CompoundKey> expectedBatchKeys = new HashSet<CompoundKey>();
+    Set<CompoundKey> expectedBatchKeys = new HashSet<>();
     expectedBatchKeys.add(key1);
     expectedBatchKeys.add(key2);
 
@@ -254,14 +269,13 @@ public class TestRestLiRouting
   public void testRoutingDetailsSimpleGet(ProtocolVersion version, String uri) throws Exception
   {
     Map<String, ResourceModel> pathRootResourceMap = buildResourceModels(TrendingResource.class);
-    _router = new RestLiRouter(pathRootResourceMap);
+    _router = new RestLiRouter(pathRootResourceMap, new RestLiConfig());
 
     RestRequest request = createRequest(uri, "GET", version);
 
-    RoutingResult result = _router.process(request, new RequestContext());
-    assertNotNull(result);
+    ServerResourceContext context = new ResourceContextImpl(new PathKeysImpl(), request, new RequestContext());
 
-    ResourceMethodDescriptor resourceMethodDescriptor = result.getResourceMethod();
+    ResourceMethodDescriptor resourceMethodDescriptor = _router.process(context);
     assertNotNull(resourceMethodDescriptor);
     assertEquals(resourceMethodDescriptor.getType(), ResourceMethod.GET);
     assertNull(resourceMethodDescriptor.getActionName());
@@ -271,8 +285,7 @@ public class TestRestLiRouting
     assertEquals(resourceMethodDescriptor.getMethod().getParameterTypes(), new Class<?>[] {});
     assertEquals(resourceMethodDescriptor.getResourceModel().getName(), "trending");
 
-    assertNotNull(result.getContext());
-    PathKeys keys = result.getContext().getPathKeys();
+    PathKeys keys = context.getPathKeys();
     assertNull(keys.getBatchIds());
   }
 
@@ -280,14 +293,13 @@ public class TestRestLiRouting
   public void testRoutingDetailsSimpleUpdate(ProtocolVersion version, String uri) throws Exception
   {
     Map<String, ResourceModel> pathRootResourceMap = buildResourceModels(TrendingResource.class);
-    _router = new RestLiRouter(pathRootResourceMap);
+    _router = new RestLiRouter(pathRootResourceMap, new RestLiConfig());
 
     RestRequest request = createRequest(uri, "PUT", version);
 
-    RoutingResult result = _router.process(request, new RequestContext());
-    assertNotNull(result);
+    ServerResourceContext context = new ResourceContextImpl(new PathKeysImpl(), request, new RequestContext());
 
-    ResourceMethodDescriptor resourceMethodDescriptor = result.getResourceMethod();
+    ResourceMethodDescriptor resourceMethodDescriptor = _router.process(context);
     assertNotNull(resourceMethodDescriptor);
     assertEquals(resourceMethodDescriptor.getType(), ResourceMethod.UPDATE);
     assertNull(resourceMethodDescriptor.getActionName());
@@ -297,8 +309,7 @@ public class TestRestLiRouting
     assertEquals(resourceMethodDescriptor.getMethod().getParameterTypes(), new Class<?>[] { Trending.class });
     assertEquals(resourceMethodDescriptor.getResourceModel().getName(), "trending");
 
-    assertNotNull(result.getContext());
-    PathKeys keys = result.getContext().getPathKeys();
+    PathKeys keys = context.getPathKeys();
     assertNull(keys.getBatchIds());
   }
 
@@ -306,14 +317,13 @@ public class TestRestLiRouting
   public void testRoutingDetailsSimplePartialUpdate(ProtocolVersion version, String uri) throws Exception
   {
     Map<String, ResourceModel> pathRootResourceMap = buildResourceModels(TrendingResource.class);
-    _router = new RestLiRouter(pathRootResourceMap);
+    _router = new RestLiRouter(pathRootResourceMap, new RestLiConfig());
 
     RestRequest request = createRequest(uri, "POST", version);
 
-    RoutingResult result = _router.process(request, new RequestContext());
-    assertNotNull(result);
+    ServerResourceContext context = new ResourceContextImpl(new PathKeysImpl(), request, new RequestContext());
 
-    ResourceMethodDescriptor resourceMethodDescriptor = result.getResourceMethod();
+    ResourceMethodDescriptor resourceMethodDescriptor = _router.process(context);
     assertNotNull(resourceMethodDescriptor);
     assertEquals(resourceMethodDescriptor.getType(), ResourceMethod.PARTIAL_UPDATE);
     assertNull(resourceMethodDescriptor.getActionName());
@@ -323,8 +333,7 @@ public class TestRestLiRouting
     assertEquals(resourceMethodDescriptor.getMethod().getParameterTypes(), new Class<?>[] { PatchRequest.class });
     assertEquals(resourceMethodDescriptor.getResourceModel().getName(), "trending");
 
-    assertNotNull(result.getContext());
-    PathKeys keys = result.getContext().getPathKeys();
+    PathKeys keys = context.getPathKeys();
     assertNull(keys.getBatchIds());
   }
 
@@ -332,14 +341,13 @@ public class TestRestLiRouting
   public void testRoutingDetailsSimpleDelete(ProtocolVersion version, String uri) throws Exception
   {
     Map<String, ResourceModel> pathRootResourceMap = buildResourceModels(TrendingResource.class);
-    _router = new RestLiRouter(pathRootResourceMap);
+    _router = new RestLiRouter(pathRootResourceMap, new RestLiConfig());
 
     RestRequest request = createRequest(uri, "DELETE", version);
 
-    RoutingResult result = _router.process(request, new RequestContext());
-    assertNotNull(result);
+    ServerResourceContext context = new ResourceContextImpl(new PathKeysImpl(), request, new RequestContext());
 
-    ResourceMethodDescriptor resourceMethodDescriptor = result.getResourceMethod();
+    ResourceMethodDescriptor resourceMethodDescriptor = _router.process(context);
     assertNotNull(resourceMethodDescriptor);
     assertEquals(resourceMethodDescriptor.getType(), ResourceMethod.DELETE);
     assertNull(resourceMethodDescriptor.getActionName());
@@ -349,8 +357,7 @@ public class TestRestLiRouting
     assertEquals(resourceMethodDescriptor.getMethod().getParameterTypes(), new Class<?>[] {});
     assertEquals(resourceMethodDescriptor.getResourceModel().getName(), "trending");
 
-    assertNotNull(result.getContext());
-    PathKeys keys = result.getContext().getPathKeys();
+    PathKeys keys = context.getPathKeys();
     assertNull(keys.getBatchIds());
   }
 
@@ -366,7 +373,7 @@ public class TestRestLiRouting
           null,
           ResourceMethod.BATCH_GET,
           "batchGet",
-          new HashSet<Long>(Arrays.asList(1L, 2L, 3L))
+          new HashSet<>(Arrays.asList(1L, 2L, 3L))
         },
         {
           "/statuses?ids=List(1,2,3)",
@@ -375,7 +382,7 @@ public class TestRestLiRouting
           null,
           ResourceMethod.BATCH_GET,
           "batchGet",
-          new HashSet<Long>(Arrays.asList(1L, 2L, 3L))
+          new HashSet<>(Arrays.asList(1L, 2L, 3L))
         },
         {
           "/statuses?ids=1&ids=2&ids=3",
@@ -384,7 +391,7 @@ public class TestRestLiRouting
           "BATCH_GET",
           ResourceMethod.BATCH_GET,
           "batchGet",
-          new HashSet<Long>(Arrays.asList(1L, 2L, 3L))
+          new HashSet<>(Arrays.asList(1L, 2L, 3L))
         },
         {
           "/statuses?ids=List(1,2,3)",
@@ -393,8 +400,8 @@ public class TestRestLiRouting
           "BATCH_GET",
           ResourceMethod.BATCH_GET,
           "batchGet",
-          new HashSet<Long>(Arrays.asList(1L, 2L, 3L))
-        },        
+          new HashSet<>(Arrays.asList(1L, 2L, 3L))
+        },
         {
           "/statuses?ids=1&ids=2",
           AllProtocolVersions.RESTLI_PROTOCOL_1_0_0.getProtocolVersion(),
@@ -402,7 +409,7 @@ public class TestRestLiRouting
           null,
           ResourceMethod.BATCH_UPDATE,
           "batchUpdate",
-          new HashSet<Long>(Arrays.asList(1L, 2L))
+          new HashSet<>(Arrays.asList(1L, 2L))
         },
         {
           "/statuses?ids=List(1,2)",
@@ -411,7 +418,7 @@ public class TestRestLiRouting
           null,
           ResourceMethod.BATCH_UPDATE,
           "batchUpdate",
-          new HashSet<Long>(Arrays.asList(1L, 2L))
+          new HashSet<>(Arrays.asList(1L, 2L))
         },
         {
           "/statuses?ids=1&ids=2",
@@ -420,7 +427,7 @@ public class TestRestLiRouting
           "BATCH_UPDATE",
           ResourceMethod.BATCH_UPDATE,
           "batchUpdate",
-          new HashSet<Long>(Arrays.asList(1L, 2L))
+          new HashSet<>(Arrays.asList(1L, 2L))
         },
         {
           "/statuses?ids=List(1,2)",
@@ -429,7 +436,7 @@ public class TestRestLiRouting
           "BATCH_UPDATE",
           ResourceMethod.BATCH_UPDATE,
           "batchUpdate",
-          new HashSet<Long>(Arrays.asList(1L, 2L))
+          new HashSet<>(Arrays.asList(1L, 2L))
         },
         {
           "/statuses?ids=1&ids=2",
@@ -438,7 +445,7 @@ public class TestRestLiRouting
           "BATCH_PARTIAL_UPDATE",
           ResourceMethod.BATCH_PARTIAL_UPDATE,
           "batchUpdate",
-          new HashSet<Long>(Arrays.asList(1L, 2L))
+          new HashSet<>(Arrays.asList(1L, 2L))
         },
         {
           "/statuses?ids=List(1,2)",
@@ -447,7 +454,7 @@ public class TestRestLiRouting
           "BATCH_PARTIAL_UPDATE",
           ResourceMethod.BATCH_PARTIAL_UPDATE,
           "batchUpdate",
-          new HashSet<Long>(Arrays.asList(1L, 2L))
+          new HashSet<>(Arrays.asList(1L, 2L))
         },
         {
           "/statuses?ids=1&ids=2",
@@ -456,7 +463,7 @@ public class TestRestLiRouting
           null,
           ResourceMethod.BATCH_DELETE,
           "batchDelete",
-          new HashSet<Long>(Arrays.asList(1L, 2L))
+          new HashSet<>(Arrays.asList(1L, 2L))
         },
         {
           "/statuses?ids=List(1,2)",
@@ -465,7 +472,7 @@ public class TestRestLiRouting
           null,
           ResourceMethod.BATCH_DELETE,
           "batchDelete",
-          new HashSet<Long>(Arrays.asList(1L, 2L))
+          new HashSet<>(Arrays.asList(1L, 2L))
         },
         {
           "/statuses?ids=1&ids=2",
@@ -474,7 +481,7 @@ public class TestRestLiRouting
           "BATCH_DELETE",
           ResourceMethod.BATCH_DELETE,
           "batchDelete",
-          new HashSet<Long>(Arrays.asList(1L, 2L))
+          new HashSet<>(Arrays.asList(1L, 2L))
         },
         {
           "/statuses?ids=List(1,2)",
@@ -483,7 +490,7 @@ public class TestRestLiRouting
           "BATCH_DELETE",
           ResourceMethod.BATCH_DELETE,
           "batchDelete",
-          new HashSet<Long>(Arrays.asList(1L, 2L))
+          new HashSet<>(Arrays.asList(1L, 2L))
         },
       };
   }
@@ -499,7 +506,7 @@ public class TestRestLiRouting
   {
     Map<String, ResourceModel> pathRootResourceMap =
       buildResourceModels(StatusCollectionResource.class);
-    _router = new RestLiRouter(pathRootResourceMap);
+    _router = new RestLiRouter(pathRootResourceMap, new RestLiConfig());
 
     checkResult(uri, version, httpMethod, restliMethod, method, StatusCollectionResource.class, methodName, true);
     checkBatchKeys(uri, version, httpMethod, keys);
@@ -517,7 +524,7 @@ public class TestRestLiRouting
           null,
           ResourceMethod.BATCH_GET,
           "batchGet",
-          new HashSet<Long>(Arrays.asList(1L, 2L, 3L))
+          new HashSet<>(Arrays.asList(1L, 2L, 3L))
         },
         {
           "/statuses?ids=Alt1&ids=badAlt2&ids=Alt3&altkey=alt",
@@ -526,7 +533,7 @@ public class TestRestLiRouting
           null,
           ResourceMethod.BATCH_GET,
           "batchGet",
-          new HashSet<Long>(Arrays.asList(1L, 3L)) // second key should log an error.
+          new HashSet<>(Arrays.asList(1L, 3L)) // second key should log an error.
         },
         {
           "/statuses?ids=List(Alt1,Alt2,Alt3)&altkey=alt",
@@ -535,7 +542,7 @@ public class TestRestLiRouting
           null,
           ResourceMethod.BATCH_GET,
           "batchGet",
-          new HashSet<Long>(Arrays.asList(1L, 2L, 3L))
+          new HashSet<>(Arrays.asList(1L, 2L, 3L))
         },
         {
           "/statuses?ids=List(Alt1,badAlt2,Alt3)&altkey=alt",
@@ -544,7 +551,7 @@ public class TestRestLiRouting
           null,
           ResourceMethod.BATCH_GET,
           "batchGet",
-          new HashSet<Long>(Arrays.asList(1L, 3L)) // second key should log an error.
+          new HashSet<>(Arrays.asList(1L, 3L)) // second key should log an error.
         },
         {
           "/statuses?ids=Alt1&ids=Alt2&ids=Alt3&altkey=alt",
@@ -553,7 +560,7 @@ public class TestRestLiRouting
           "BATCH_GET",
           ResourceMethod.BATCH_GET,
           "batchGet",
-          new HashSet<Long>(Arrays.asList(1L, 2L, 3L))
+          new HashSet<>(Arrays.asList(1L, 2L, 3L))
         },
         {
           "/statuses?ids=Alt1&ids=badAlt2&ids=Alt3&altkey=alt",
@@ -562,7 +569,7 @@ public class TestRestLiRouting
           "BATCH_GET",
           ResourceMethod.BATCH_GET,
           "batchGet",
-          new HashSet<Long>(Arrays.asList(1L, 3L)) // second key should log an error
+          new HashSet<>(Arrays.asList(1L, 3L)) // second key should log an error
         },
         {
           "/statuses?ids=List(Alt1,Alt2,Alt3)&altkey=alt",
@@ -571,7 +578,7 @@ public class TestRestLiRouting
           "BATCH_GET",
           ResourceMethod.BATCH_GET,
           "batchGet",
-          new HashSet<Long>(Arrays.asList(1L, 2L, 3L))
+          new HashSet<>(Arrays.asList(1L, 2L, 3L))
         },
         {
           "/statuses?ids=List(Alt1,badAlt2,Alt3)&altkey=alt",
@@ -580,7 +587,7 @@ public class TestRestLiRouting
           "BATCH_GET",
           ResourceMethod.BATCH_GET,
           "batchGet",
-          new HashSet<Long>(Arrays.asList(1L, 3L)) // second key should log an error
+          new HashSet<>(Arrays.asList(1L, 3L)) // second key should log an error
         },
         {
           "/statuses?ids=Alt1&ids=Alt2&altkey=alt",
@@ -589,7 +596,7 @@ public class TestRestLiRouting
           null,
           ResourceMethod.BATCH_UPDATE,
           "batchUpdate",
-          new HashSet<Long>(Arrays.asList(1L, 2L))
+          new HashSet<>(Arrays.asList(1L, 2L))
         },
         {
           "/statuses?ids=List(Alt1,Alt2)&altkey=alt",
@@ -598,7 +605,7 @@ public class TestRestLiRouting
           null,
           ResourceMethod.BATCH_UPDATE,
           "batchUpdate",
-          new HashSet<Long>(Arrays.asList(1L, 2L))
+          new HashSet<>(Arrays.asList(1L, 2L))
         },
         {
           "/statuses?ids=Alt1&ids=Alt2&altkey=alt",
@@ -607,7 +614,7 @@ public class TestRestLiRouting
           "BATCH_UPDATE",
           ResourceMethod.BATCH_UPDATE,
           "batchUpdate",
-          new HashSet<Long>(Arrays.asList(1L, 2L))
+          new HashSet<>(Arrays.asList(1L, 2L))
         },
         {
           "/statuses?ids=List(Alt1,Alt2)&altkey=alt",
@@ -616,7 +623,7 @@ public class TestRestLiRouting
           "BATCH_UPDATE",
           ResourceMethod.BATCH_UPDATE,
           "batchUpdate",
-          new HashSet<Long>(Arrays.asList(1L, 2L))
+          new HashSet<>(Arrays.asList(1L, 2L))
         },
         {
           "/statuses?ids=Alt1&ids=Alt2&altkey=alt",
@@ -625,7 +632,7 @@ public class TestRestLiRouting
           "BATCH_PARTIAL_UPDATE",
           ResourceMethod.BATCH_PARTIAL_UPDATE,
           "batchUpdate",
-          new HashSet<Long>(Arrays.asList(1L, 2L))
+          new HashSet<>(Arrays.asList(1L, 2L))
         },
         {
           "/statuses?ids=List(Alt1,Alt2)&altkey=alt",
@@ -634,7 +641,7 @@ public class TestRestLiRouting
           "BATCH_PARTIAL_UPDATE",
           ResourceMethod.BATCH_PARTIAL_UPDATE,
           "batchUpdate",
-          new HashSet<Long>(Arrays.asList(1L, 2L))
+          new HashSet<>(Arrays.asList(1L, 2L))
         },
         {
           "/statuses?ids=Alt1&ids=Alt2&altkey=alt",
@@ -643,7 +650,7 @@ public class TestRestLiRouting
           null,
           ResourceMethod.BATCH_DELETE,
           "batchDelete",
-          new HashSet<Long>(Arrays.asList(1L, 2L))
+          new HashSet<>(Arrays.asList(1L, 2L))
         },
         {
           "/statuses?ids=List(Alt1,Alt2)&altkey=alt",
@@ -652,7 +659,7 @@ public class TestRestLiRouting
           null,
           ResourceMethod.BATCH_DELETE,
           "batchDelete",
-          new HashSet<Long>(Arrays.asList(1L, 2L))
+          new HashSet<>(Arrays.asList(1L, 2L))
         },
         {
           "/statuses?ids=Alt1&ids=Alt2&altkey=alt",
@@ -661,7 +668,7 @@ public class TestRestLiRouting
           "BATCH_DELETE",
           ResourceMethod.BATCH_DELETE,
           "batchDelete",
-          new HashSet<Long>(Arrays.asList(1L, 2L))
+          new HashSet<>(Arrays.asList(1L, 2L))
         },
         {
           "/statuses?ids=List(Alt1,Alt2)&altkey=alt",
@@ -670,7 +677,7 @@ public class TestRestLiRouting
           "BATCH_DELETE",
           ResourceMethod.BATCH_DELETE,
           "batchDelete",
-          new HashSet<Long>(Arrays.asList(1L, 2L))
+          new HashSet<>(Arrays.asList(1L, 2L))
         }
       };
   }
@@ -686,7 +693,7 @@ public class TestRestLiRouting
   {
 
     Map<String, ResourceModel> pathRootResourceMap = buildResourceModels(StatusCollectionResource.class);
-    _router = new RestLiRouter(pathRootResourceMap);
+    _router = new RestLiRouter(pathRootResourceMap, new RestLiConfig());
 
     checkResult(uri, version, httpMethod, restliMethod, method, StatusCollectionResource.class, methodName, true);
     checkBatchKeys(uri, version, httpMethod, expectedKeys);
@@ -704,7 +711,7 @@ public class TestRestLiRouting
           null,
           ResourceMethod.BATCH_GET,
           "batchGet",
-          new HashSet<Long>(Arrays.asList(1L, 2L, 3L))
+          new HashSet<>(Arrays.asList(1L, 2L, 3L))
         },
         {
           "/statuses/1/replies?ids=List(1,2,3)",
@@ -713,7 +720,7 @@ public class TestRestLiRouting
           null,
           ResourceMethod.BATCH_GET,
           "batchGet",
-          new HashSet<Long>(Arrays.asList(1L, 2L, 3L))
+          new HashSet<>(Arrays.asList(1L, 2L, 3L))
         }
       };
   }
@@ -729,7 +736,7 @@ public class TestRestLiRouting
     Map<String, ResourceModel> pathRootResourceMap =
       buildResourceModels(StatusCollectionResource.class,
                           RepliesCollectionResource.class);
-    _router = new RestLiRouter(pathRootResourceMap);
+    _router = new RestLiRouter(pathRootResourceMap, new RestLiConfig());
 
     checkResult(uri, version, httpMethod, restliMethod, method, RepliesCollectionResource.class, methodName, true);
     checkBatchKeys(uri, version, httpMethod, keys);
@@ -747,7 +754,7 @@ public class TestRestLiRouting
           null,
           ResourceMethod.BATCH_GET,
           "batchGet",
-          new HashSet<String>(Arrays.asList("1", "2", "3"))
+          new HashSet<>(Arrays.asList("1", "2", "3"))
         },
         {
           "/trending/trendRegions?ids=List(1,2,3)",
@@ -756,7 +763,7 @@ public class TestRestLiRouting
           null,
           ResourceMethod.BATCH_GET,
           "batchGet",
-          new HashSet<String>(Arrays.asList("1", "2", "3"))
+          new HashSet<>(Arrays.asList("1", "2", "3"))
         },
         {
           "/trending/trendRegions?ids=1&ids=2",
@@ -765,7 +772,7 @@ public class TestRestLiRouting
           "BATCH_UPDATE",
           ResourceMethod.BATCH_UPDATE,
           "batchUpdate",
-          new HashSet<String>(Arrays.asList("1", "2"))
+          new HashSet<>(Arrays.asList("1", "2"))
         },
         {
           "/trending/trendRegions?ids=List(1,2)",
@@ -774,7 +781,7 @@ public class TestRestLiRouting
           "BATCH_UPDATE",
           ResourceMethod.BATCH_UPDATE,
           "batchUpdate",
-          new HashSet<String>(Arrays.asList("1", "2"))
+          new HashSet<>(Arrays.asList("1", "2"))
         },
         {
           "/trending/trendRegions?ids=1&ids=2",
@@ -783,7 +790,7 @@ public class TestRestLiRouting
           "BATCH_PARTIAL_UPDATE",
           ResourceMethod.BATCH_PARTIAL_UPDATE,
           "batchUpdate",
-          new HashSet<String>(Arrays.asList("1", "2"))
+          new HashSet<>(Arrays.asList("1", "2"))
         },
         {
           "/trending/trendRegions?ids=List(1,2)",
@@ -792,7 +799,7 @@ public class TestRestLiRouting
           "BATCH_PARTIAL_UPDATE",
           ResourceMethod.BATCH_PARTIAL_UPDATE,
           "batchUpdate",
-          new HashSet<String>(Arrays.asList("1", "2"))
+          new HashSet<>(Arrays.asList("1", "2"))
         }
       };
   }
@@ -808,7 +815,7 @@ public class TestRestLiRouting
     Map<String, ResourceModel> pathRootResourceMap =
       buildResourceModels(TrendingResource.class,
                           TrendRegionsCollectionResource.class);
-    _router = new RestLiRouter(pathRootResourceMap);
+    _router = new RestLiRouter(pathRootResourceMap, new RestLiConfig());
 
     checkResult(uri, version, httpMethod, restliMethod, method, TrendRegionsCollectionResource.class, methodName, true);
     checkBatchKeys(uri, version, httpMethod, keys);
@@ -847,7 +854,7 @@ public class TestRestLiRouting
           null,
           ResourceMethod.BATCH_GET,
           "batchGet",
-          new HashSet<CompoundKey>(Arrays.asList(key1, key2, key3))
+          new HashSet<>(Arrays.asList(key1, key2, key3))
         },
         { "/follows?ids=followerID%3D1%26followeeID%3D1&ids=followerID%3D1%26followeeID%3D3&ids=followerID%3D1%26followeeID%3D2",
           AllProtocolVersions.RESTLI_PROTOCOL_1_0_0.getProtocolVersion(),
@@ -855,7 +862,7 @@ public class TestRestLiRouting
           null,
           ResourceMethod.BATCH_GET,
           "batchGet",
-          new HashSet<CompoundKey>(Arrays.asList(key1, key2, key3))
+          new HashSet<>(Arrays.asList(key1, key2, key3))
         },
         { "/follows?ids=List((followerID:1,followeeID:1),(followerID:1,followeeID:3),(followerID:1,followeeID:2))",
           AllProtocolVersions.RESTLI_PROTOCOL_2_0_0.getProtocolVersion(),
@@ -863,7 +870,7 @@ public class TestRestLiRouting
           null,
           ResourceMethod.BATCH_GET,
           "batchGet",
-          new HashSet<CompoundKey>(Arrays.asList(key1, key2, key3))
+          new HashSet<>(Arrays.asList(key1, key2, key3))
         },
         { "/follows?ids=followerID:1;followeeID:1&ids=followerID:1;followeeID:3;badKey:5&ids=followerID:1;followeeID:2", // legacy
           AllProtocolVersions.RESTLI_PROTOCOL_1_0_0.getProtocolVersion(),
@@ -871,7 +878,7 @@ public class TestRestLiRouting
           null,
           ResourceMethod.BATCH_GET,
           "batchGet",
-          new HashSet<CompoundKey>(Arrays.asList(key1, key3)) // second key should log an error.
+          new HashSet<>(Arrays.asList(key1, key3)) // second key should log an error.
         },
         { "/follows?ids=followerID%3D1%26followeeID%3D1&ids=followerID%3D1%26followeeID%3D3%26badKey%3D5&ids=followerID%3D1%26followeeID%3D2",
           AllProtocolVersions.RESTLI_PROTOCOL_1_0_0.getProtocolVersion(),
@@ -879,7 +886,7 @@ public class TestRestLiRouting
           null,
           ResourceMethod.BATCH_GET,
           "batchGet",
-          new HashSet<CompoundKey>(Arrays.asList(key1, key3)) // second key should log an error
+          new HashSet<>(Arrays.asList(key1, key3)) // second key should log an error
         },
         { "/follows?ids=List((followerID:1,followeeID:1),(followerID:1,followeeID:3,badKey:5),(followerID:1,followeeID:2))",
           AllProtocolVersions.RESTLI_PROTOCOL_2_0_0.getProtocolVersion(),
@@ -887,7 +894,7 @@ public class TestRestLiRouting
           null,
           ResourceMethod.BATCH_GET,
           "batchGet",
-          new HashSet<CompoundKey>(Arrays.asList(key1, key3)) // second key should log an error
+          new HashSet<>(Arrays.asList(key1, key3)) // second key should log an error
         },
       };
   }
@@ -902,7 +909,7 @@ public class TestRestLiRouting
                                           Set<CompoundKey> compoundKeys) throws Exception
   {
     Map<String, ResourceModel> pathRootResourceMap = buildResourceModels(FollowsAssociativeResource.class);
-    _router = new RestLiRouter(pathRootResourceMap);
+    _router = new RestLiRouter(pathRootResourceMap, new RestLiConfig());
 
     checkResult(uri, version, httpMethod, restliMethod, method, FollowsAssociativeResource.class, methodName, true);
     checkBatchKeys(uri, version, httpMethod, compoundKeys);
@@ -918,9 +925,9 @@ public class TestRestLiRouting
     TwitterTestDataModels.DiscoveredItemKeyParams emptyParams = new TwitterTestDataModels.DiscoveredItemKeyParams();
 
     ComplexResourceKey<TwitterTestDataModels.DiscoveredItemKey, TwitterTestDataModels.DiscoveredItemKeyParams> complexKey1 =
-      new ComplexResourceKey<TwitterTestDataModels.DiscoveredItemKey, TwitterTestDataModels.DiscoveredItemKeyParams>(keyPart1, emptyParams);
+      new ComplexResourceKey<>(keyPart1, emptyParams);
     ComplexResourceKey<TwitterTestDataModels.DiscoveredItemKey, TwitterTestDataModels.DiscoveredItemKeyParams> complexKey2 =
-      new ComplexResourceKey<TwitterTestDataModels.DiscoveredItemKey, TwitterTestDataModels.DiscoveredItemKeyParams>(keyPart2, emptyParams);
+      new ComplexResourceKey<>(keyPart2, emptyParams);
 
     return new Object[][]
       {
@@ -931,7 +938,7 @@ public class TestRestLiRouting
           "BATCH_GET",
           ResourceMethod.BATCH_GET,
           "batchGet",
-          new HashSet<ComplexResourceKey<TwitterTestDataModels.DiscoveredItemKey, TwitterTestDataModels.DiscoveredItemKeyParams>>(Arrays.asList(complexKey1, complexKey2))
+          new HashSet<>(Arrays.asList(complexKey1, complexKey2))
         },
         {
           "/discovereditems?ids=List((userId:1,type:2,itemId:3),(userId:4,type:5,itemId:6))",
@@ -940,7 +947,7 @@ public class TestRestLiRouting
           "BATCH_GET",
           ResourceMethod.BATCH_GET,
           "batchGet",
-          new HashSet<ComplexResourceKey<TwitterTestDataModels.DiscoveredItemKey, TwitterTestDataModels.DiscoveredItemKeyParams>>(Arrays.asList(complexKey1, complexKey2))
+          new HashSet<>(Arrays.asList(complexKey1, complexKey2))
         },
         {
           "/discovereditems?ids%5B0%5D.userId=1&ids%5B0%5D.type=2&ids%5B0%5D.itemId=3&ids%5B1%5D.userId=4&ids%5B1%5D.type=5&ids%5B1%5D.itemId=6",
@@ -949,7 +956,7 @@ public class TestRestLiRouting
           "BATCH_UPDATE",
           ResourceMethod.BATCH_UPDATE,
           "batchUpdate",
-          new HashSet<ComplexResourceKey<TwitterTestDataModels.DiscoveredItemKey, TwitterTestDataModels.DiscoveredItemKeyParams>>(Arrays.asList(complexKey1, complexKey2))
+          new HashSet<>(Arrays.asList(complexKey1, complexKey2))
         },
         {
           "/discovereditems?ids=List((userId:1,type:2,itemId:3),(userId:4,type:5,itemId:6))",
@@ -958,7 +965,7 @@ public class TestRestLiRouting
           "BATCH_UPDATE",
           ResourceMethod.BATCH_UPDATE,
           "batchUpdate",
-          new HashSet<ComplexResourceKey<TwitterTestDataModels.DiscoveredItemKey, TwitterTestDataModels.DiscoveredItemKeyParams>>(Arrays.asList(complexKey1, complexKey2))
+          new HashSet<>(Arrays.asList(complexKey1, complexKey2))
         },
         {
           "/discovereditems?ids%5B0%5D.userId=1&ids%5B0%5D.type=2&ids%5B0%5D.itemId=3&ids%5B1%5D.userId=4&ids%5B1%5D.type=5&ids%5B1%5D.itemId=6",
@@ -967,7 +974,7 @@ public class TestRestLiRouting
           "BATCH_PARTIAL_UPDATE",
           ResourceMethod.BATCH_PARTIAL_UPDATE,
           "batchUpdate",
-          new HashSet<ComplexResourceKey<TwitterTestDataModels.DiscoveredItemKey, TwitterTestDataModels.DiscoveredItemKeyParams>>(Arrays.asList(complexKey1, complexKey2))
+          new HashSet<>(Arrays.asList(complexKey1, complexKey2))
         },
         {
           "/discovereditems?ids=List((userId:1,type:2,itemId:3),(userId:4,type:5,itemId:6))",
@@ -976,7 +983,7 @@ public class TestRestLiRouting
           "BATCH_PARTIAL_UPDATE",
           ResourceMethod.BATCH_PARTIAL_UPDATE,
           "batchUpdate",
-          new HashSet<ComplexResourceKey<TwitterTestDataModels.DiscoveredItemKey, TwitterTestDataModels.DiscoveredItemKeyParams>>(Arrays.asList(complexKey1, complexKey2))
+          new HashSet<>(Arrays.asList(complexKey1, complexKey2))
         },
         {
           "/discovereditems?ids%5B0%5D.userId=1&ids%5B0%5D.type=2&ids%5B0%5D.itemId=3&ids%5B1%5D.userId=4&ids%5B1%5D.type=5&ids%5B1%5D.itemId=6",
@@ -985,7 +992,7 @@ public class TestRestLiRouting
           "BATCH_DELETE",
           ResourceMethod.BATCH_DELETE,
           "batchDelete",
-          new HashSet<ComplexResourceKey<TwitterTestDataModels.DiscoveredItemKey, TwitterTestDataModels.DiscoveredItemKeyParams>>(Arrays.asList(complexKey1, complexKey2))
+          new HashSet<>(Arrays.asList(complexKey1, complexKey2))
         },
         {
           "/discovereditems?ids=List((userId:1,type:2,itemId:3),(userId:4,type:5,itemId:6))",
@@ -994,7 +1001,7 @@ public class TestRestLiRouting
           "BATCH_DELETE",
           ResourceMethod.BATCH_DELETE,
           "batchDelete",
-          new HashSet<ComplexResourceKey<TwitterTestDataModels.DiscoveredItemKey, TwitterTestDataModels.DiscoveredItemKeyParams>>(Arrays.asList(complexKey1, complexKey2))
+          new HashSet<>(Arrays.asList(complexKey1, complexKey2))
         },
       };
   }
@@ -1010,7 +1017,7 @@ public class TestRestLiRouting
                                                                 TwitterTestDataModels.DiscoveredItemKeyParams>> compoundKeys) throws Exception
   {
     Map<String, ResourceModel> pathRootResourceMap = buildResourceModels(DiscoveredItemsResource.class);
-    _router = new RestLiRouter(pathRootResourceMap);
+    _router = new RestLiRouter(pathRootResourceMap, new RestLiConfig());
 
     checkResult(uri, version, httpMethod, restliMethod, method, DiscoveredItemsResource.class, methodName, true);
     checkBatchKeys(uri, version, httpMethod, compoundKeys);
@@ -1020,17 +1027,17 @@ public class TestRestLiRouting
   public Object[][] routingCollection()
   {
     String[] statusKey = new String[] { "statusID" };
-    
+
     return new Object[][]
       {
-        { 
+        {
           "/statuses/1",
-          AllProtocolVersions.RESTLI_PROTOCOL_1_0_0.getProtocolVersion(), 
-          "GET", 
+          AllProtocolVersions.RESTLI_PROTOCOL_1_0_0.getProtocolVersion(),
+          "GET",
           null,
-          ResourceMethod.GET, 
-          "get", 
-          statusKey 
+          ResourceMethod.GET,
+          "get",
+          statusKey
         },
         { "/statuses/1",
           AllProtocolVersions.RESTLI_PROTOCOL_2_0_0.getProtocolVersion(),
@@ -1038,7 +1045,7 @@ public class TestRestLiRouting
           null,
           ResourceMethod.GET,
           "get",
-          statusKey 
+          statusKey
         },
         { "/statuses/1",
           AllProtocolVersions.RESTLI_PROTOCOL_1_0_0.getProtocolVersion(),
@@ -1046,7 +1053,7 @@ public class TestRestLiRouting
           "GET",
           ResourceMethod.GET,
           "get",
-          statusKey 
+          statusKey
         },
         { "/statuses/1",
           AllProtocolVersions.RESTLI_PROTOCOL_2_0_0.getProtocolVersion(),
@@ -1054,7 +1061,7 @@ public class TestRestLiRouting
           "GET",
           ResourceMethod.GET,
           "get",
-          statusKey 
+          statusKey
         },
         { "/st%61tuses/1",
           AllProtocolVersions.RESTLI_PROTOCOL_1_0_0.getProtocolVersion(),
@@ -1062,7 +1069,7 @@ public class TestRestLiRouting
           null,
           ResourceMethod.GET,
           "get",
-          statusKey 
+          statusKey
         },
         { "/st%61tuses/1",
           AllProtocolVersions.RESTLI_PROTOCOL_2_0_0.getProtocolVersion(),
@@ -1070,7 +1077,7 @@ public class TestRestLiRouting
           null,
           ResourceMethod.GET,
           "get",
-          statusKey 
+          statusKey
         },
         { "/statuses/%31",
           AllProtocolVersions.RESTLI_PROTOCOL_1_0_0.getProtocolVersion(),
@@ -1078,7 +1085,7 @@ public class TestRestLiRouting
           null,
           ResourceMethod.GET,
           "get",
-          statusKey 
+          statusKey
         },
         { "/statuses/%31",
           AllProtocolVersions.RESTLI_PROTOCOL_2_0_0.getProtocolVersion(),
@@ -1086,7 +1093,7 @@ public class TestRestLiRouting
           null,
           ResourceMethod.GET,
           "get",
-          statusKey 
+          statusKey
         },
         { "/statuses/-1",
           AllProtocolVersions.RESTLI_PROTOCOL_1_0_0.getProtocolVersion(),
@@ -1094,7 +1101,7 @@ public class TestRestLiRouting
            null,
           ResourceMethod.GET,
           "get",
-          statusKey 
+          statusKey
         },
         { "/statuses/-1",
           AllProtocolVersions.RESTLI_PROTOCOL_2_0_0.getProtocolVersion(),
@@ -1102,7 +1109,7 @@ public class TestRestLiRouting
            null,
           ResourceMethod.GET,
           "get",
-          statusKey 
+          statusKey
         },
         { "/statuses",
           AllProtocolVersions.RESTLI_PROTOCOL_1_0_0.getProtocolVersion(),
@@ -1110,7 +1117,7 @@ public class TestRestLiRouting
           null,
           ResourceMethod.CREATE,
           "create",
-          new String[0] 
+          new String[0]
         },
         { "/statuses",
           AllProtocolVersions.RESTLI_PROTOCOL_2_0_0.getProtocolVersion(),
@@ -1118,7 +1125,7 @@ public class TestRestLiRouting
           null,
           ResourceMethod.CREATE,
           "create",
-          new String[0] 
+          new String[0]
         },
         { "/statuses",
           AllProtocolVersions.RESTLI_PROTOCOL_1_0_0.getProtocolVersion(),
@@ -1126,7 +1133,7 @@ public class TestRestLiRouting
           "CREATE",
           ResourceMethod.CREATE,
           "create",
-          new String[0] 
+          new String[0]
         },
         { "/statuses",
           AllProtocolVersions.RESTLI_PROTOCOL_2_0_0.getProtocolVersion(),
@@ -1134,7 +1141,7 @@ public class TestRestLiRouting
           "CREATE",
           ResourceMethod.CREATE,
           "create",
-          new String[0] 
+          new String[0]
         },
         { "/statuses/1",
           AllProtocolVersions.RESTLI_PROTOCOL_1_0_0.getProtocolVersion(),
@@ -1142,7 +1149,7 @@ public class TestRestLiRouting
           null,
           ResourceMethod.UPDATE,
           "update",
-          statusKey 
+          statusKey
         },
         { "/statuses/1",
           AllProtocolVersions.RESTLI_PROTOCOL_2_0_0.getProtocolVersion(),
@@ -1150,7 +1157,7 @@ public class TestRestLiRouting
           null,
           ResourceMethod.UPDATE,
           "update",
-          statusKey 
+          statusKey
         },
         { "/statuses/1",
           AllProtocolVersions.RESTLI_PROTOCOL_1_0_0.getProtocolVersion(),
@@ -1158,7 +1165,7 @@ public class TestRestLiRouting
           "UPDATE",
           ResourceMethod.UPDATE,
           "update",
-          statusKey 
+          statusKey
         },
         { "/statuses/1",
           AllProtocolVersions.RESTLI_PROTOCOL_2_0_0.getProtocolVersion(),
@@ -1166,7 +1173,7 @@ public class TestRestLiRouting
           "UPDATE",
           ResourceMethod.UPDATE,
           "update",
-          statusKey 
+          statusKey
         },
         { "/statuses/1",
           AllProtocolVersions.RESTLI_PROTOCOL_1_0_0.getProtocolVersion(),
@@ -1174,7 +1181,7 @@ public class TestRestLiRouting
           null,
           ResourceMethod.PARTIAL_UPDATE,
           "update",
-          statusKey 
+          statusKey
         },
         { "/statuses/1",
           AllProtocolVersions.RESTLI_PROTOCOL_2_0_0.getProtocolVersion(),
@@ -1182,7 +1189,7 @@ public class TestRestLiRouting
           null,
           ResourceMethod.PARTIAL_UPDATE,
           "update",
-          statusKey 
+          statusKey
         },
         { "/statuses/1",
           AllProtocolVersions.RESTLI_PROTOCOL_1_0_0.getProtocolVersion(),
@@ -1190,7 +1197,7 @@ public class TestRestLiRouting
           "PARTIAL_UPDATE",
           ResourceMethod.PARTIAL_UPDATE,
           "update",
-          statusKey 
+          statusKey
         },
         { "/statuses/1",
           AllProtocolVersions.RESTLI_PROTOCOL_2_0_0.getProtocolVersion(),
@@ -1198,7 +1205,7 @@ public class TestRestLiRouting
           "PARTIAL_UPDATE",
           ResourceMethod.PARTIAL_UPDATE,
           "update",
-          statusKey 
+          statusKey
         },
         { "/statuses/1",
           AllProtocolVersions.RESTLI_PROTOCOL_1_0_0.getProtocolVersion(),
@@ -1206,7 +1213,7 @@ public class TestRestLiRouting
           null,
           ResourceMethod.DELETE,
           "delete",
-          statusKey 
+          statusKey
         },
         { "/statuses/1",
           AllProtocolVersions.RESTLI_PROTOCOL_2_0_0.getProtocolVersion(),
@@ -1214,7 +1221,7 @@ public class TestRestLiRouting
           null,
           ResourceMethod.DELETE,
           "delete",
-          statusKey 
+          statusKey
         },
         { "/statuses/1",
           AllProtocolVersions.RESTLI_PROTOCOL_1_0_0.getProtocolVersion(),
@@ -1222,7 +1229,7 @@ public class TestRestLiRouting
           "DELETE",
           ResourceMethod.DELETE,
           "delete",
-          statusKey 
+          statusKey
         },
         { "/statuses/1",
           AllProtocolVersions.RESTLI_PROTOCOL_2_0_0.getProtocolVersion(),
@@ -1230,7 +1237,7 @@ public class TestRestLiRouting
           "DELETE",
           ResourceMethod.DELETE,
           "delete",
-          statusKey 
+          statusKey
         },
         { "/statuses?q=search",
           AllProtocolVersions.RESTLI_PROTOCOL_1_0_0.getProtocolVersion(),
@@ -1238,7 +1245,7 @@ public class TestRestLiRouting
           null,
           ResourceMethod.FINDER,
           "search",
-          new String[0] 
+          new String[0]
         },
         { "/statuses?q=search",
           AllProtocolVersions.RESTLI_PROTOCOL_2_0_0.getProtocolVersion(),
@@ -1246,7 +1253,7 @@ public class TestRestLiRouting
           null,
           ResourceMethod.FINDER,
           "search",
-          new String[0] 
+          new String[0]
         },
         { "/statuses?q=search",
           AllProtocolVersions.RESTLI_PROTOCOL_1_0_0.getProtocolVersion(),
@@ -1254,7 +1261,7 @@ public class TestRestLiRouting
           "FINDER",
           ResourceMethod.FINDER,
           "search",
-          new String[0] 
+          new String[0]
         },
         { "/statuses?q=search",
           AllProtocolVersions.RESTLI_PROTOCOL_2_0_0.getProtocolVersion(),
@@ -1262,7 +1269,23 @@ public class TestRestLiRouting
           "FINDER",
           ResourceMethod.FINDER,
           "search",
-          new String[0] 
+          new String[0]
+        },
+        { "/statuses?q=findByAction&action=anyAction&bq=anyBqValue",
+            AllProtocolVersions.RESTLI_PROTOCOL_2_0_0.getProtocolVersion(),
+            "GET",
+            "FINDER",
+            ResourceMethod.FINDER,
+            "findByAction",
+            new String[0]
+        },
+        { "/statuses?bq=batchFinderByAction&action=anyAction",
+            AllProtocolVersions.RESTLI_PROTOCOL_2_0_0.getProtocolVersion(),
+            "GET",
+            "BATCH_FINDER",
+            ResourceMethod.BATCH_FINDER,
+            "batchFinderByAction",
+            new String[0]
         },
         { "/statuses?q=search&keywords=linkedin",
           AllProtocolVersions.RESTLI_PROTOCOL_1_0_0.getProtocolVersion(),
@@ -1270,7 +1293,7 @@ public class TestRestLiRouting
           null,
           ResourceMethod.FINDER,
           "search",
-          new String[0] 
+          new String[0]
         },
         { "/statuses?q=search&keywords=linkedin",
           AllProtocolVersions.RESTLI_PROTOCOL_2_0_0.getProtocolVersion(),
@@ -1278,7 +1301,7 @@ public class TestRestLiRouting
           null,
           ResourceMethod.FINDER,
           "search",
-          new String[0] 
+          new String[0]
         },
         { "/statuses?q=user_timeline",
           AllProtocolVersions.RESTLI_PROTOCOL_1_0_0.getProtocolVersion(),
@@ -1286,7 +1309,7 @@ public class TestRestLiRouting
           null,
           ResourceMethod.FINDER,
           "getUserTimeline",
-          new String[0] 
+          new String[0]
         },
         { "/statuses?q=user_timeline",
           AllProtocolVersions.RESTLI_PROTOCOL_2_0_0.getProtocolVersion(),
@@ -1294,7 +1317,7 @@ public class TestRestLiRouting
           null,
           ResourceMethod.FINDER,
           "getUserTimeline",
-          new String[0] 
+          new String[0]
         },
         { "/statuses?q=public_timeline",
           AllProtocolVersions.RESTLI_PROTOCOL_1_0_0.getProtocolVersion(),
@@ -1302,7 +1325,7 @@ public class TestRestLiRouting
           null,
           ResourceMethod.FINDER,
           "getPublicTimeline",
-          new String[0] 
+          new String[0]
         },
         { "/statuses?q=public_timeline",
           AllProtocolVersions.RESTLI_PROTOCOL_2_0_0.getProtocolVersion(),
@@ -1310,7 +1333,7 @@ public class TestRestLiRouting
           null,
           ResourceMethod.FINDER,
           "getPublicTimeline",
-          new String[0] 
+          new String[0]
         },
         { "/statuses",
           AllProtocolVersions.RESTLI_PROTOCOL_1_0_0.getProtocolVersion(),
@@ -1318,7 +1341,7 @@ public class TestRestLiRouting
           "BATCH_CREATE",
           ResourceMethod.BATCH_CREATE,
           "batchCreate",
-          new String[0] 
+          new String[0]
         },
         { "/statuses",
           AllProtocolVersions.RESTLI_PROTOCOL_2_0_0.getProtocolVersion(),
@@ -1326,7 +1349,7 @@ public class TestRestLiRouting
           "BATCH_CREATE",
           ResourceMethod.BATCH_CREATE,
           "batchCreate",
-          new String[0] 
+          new String[0]
         }
       };
   }
@@ -1336,7 +1359,7 @@ public class TestRestLiRouting
   {
     Map<String, ResourceModel> pathRootResourceMap =
       buildResourceModels(StatusCollectionResource.class);
-    _router = new RestLiRouter(pathRootResourceMap);
+    _router = new RestLiRouter(pathRootResourceMap, new RestLiConfig());
 
     checkResult(uri, version, httpMethod, restliMethod, method, StatusCollectionResource.class, methodName, false, pathKeys);
   }
@@ -1557,11 +1580,11 @@ public class TestRestLiRouting
   {
     Map<String, ResourceModel> pathRootResourceMap =
       buildResourceModels(StatusCollectionResource.class);
-    _router = new RestLiRouter(pathRootResourceMap);
+    _router = new RestLiRouter(pathRootResourceMap, new RestLiConfig());
 
     checkResult(uri, version, httpMethod, restliMethod, method, StatusCollectionResource.class, methodName, false, pathKeys);
   }
-  
+
   @DataProvider(name = TestConstants.RESTLI_PROTOCOL_1_2_PREFIX + "routingCollectionSubResource")
   public Object[][] routingCollectionSubResource()
   {
@@ -1646,7 +1669,7 @@ public class TestRestLiRouting
       buildResourceModels(StatusCollectionResource.class,
                           RepliesCollectionResource.class,
                           LocationResource.class);
-    _router = new RestLiRouter(pathRootResourceMap);
+    _router = new RestLiRouter(pathRootResourceMap, new RestLiConfig());
 
     checkResult(uri, version, httpMethod, method, resourceClass, methodName, false, "statusID");
   }
@@ -1655,7 +1678,7 @@ public class TestRestLiRouting
   public Object[][] routingAssociation()
   {
     String[] assocPathKeys = new String[] { "followerID", "followeeID" };
-    
+
     return new Object[][]
       {
         {
@@ -1780,7 +1803,7 @@ public class TestRestLiRouting
   public void testRoutingAssociation(String uri, ProtocolVersion version, String httpMethod, ResourceMethod method, String methodName, String[] pathKeys) throws Exception
   {
     Map<String, ResourceModel> pathRootResourceMap = buildResourceModels(FollowsAssociativeResource.class);
-    _router = new RestLiRouter(pathRootResourceMap);
+    _router = new RestLiRouter(pathRootResourceMap, new RestLiConfig());
 
     checkResult(uri, version, httpMethod, method, FollowsAssociativeResource.class, methodName, false, pathKeys);
   }
@@ -1947,11 +1970,11 @@ public class TestRestLiRouting
                                     boolean hasKeys) throws Exception
   {
     Map<String, ResourceModel> pathRootResourceMap = buildResourceModels(DiscoveredItemsResource.class);
-    _router = new RestLiRouter(pathRootResourceMap);
+    _router = new RestLiRouter(pathRootResourceMap, new RestLiConfig());
 
     checkResult(uri, version, httpMethod, restliMethod, method, DiscoveredItemsResource.class, methodName, false, hasKeys? new String[]{"discoveredItemId"} : new String[0]);
   }
-  
+
   @DataProvider(name = TestConstants.RESTLI_PROTOCOL_1_2_PREFIX + "routingSimpleResource")
   public Object[][] routingSimpleResource() throws Exception
   {
@@ -2021,7 +2044,7 @@ public class TestRestLiRouting
   {
     Map<String, ResourceModel> pathRootResourceMap =
       buildResourceModels(TrendingResource.class);
-    _router = new RestLiRouter(pathRootResourceMap);
+    _router = new RestLiRouter(pathRootResourceMap, new RestLiConfig());
 
     checkResult("/trending", version, httpMethod, restliMethod, method, TrendingResource.class, methodName, false);
   }
@@ -2136,7 +2159,7 @@ public class TestRestLiRouting
     Map<String, ResourceModel> pathRootResourceMap =
       buildResourceModels(TrendingResource.class,
                           TrendRegionsCollectionResource.class);
-    _router = new RestLiRouter(pathRootResourceMap);
+    _router = new RestLiRouter(pathRootResourceMap, new RestLiConfig());
 
     checkResult(uri, version, httpMethod, method, TrendRegionsCollectionResource.class, methodName, false, pathKeys);
   }
@@ -2415,7 +2438,7 @@ public class TestRestLiRouting
                           FollowsAssociativeResource.class,
                           RepliesCollectionResource.class);
 
-    _router = new RestLiRouter(pathRootResourceMap);
+    _router = new RestLiRouter(pathRootResourceMap, new RestLiConfig());
 
     expectRoutingExceptionWithStatus(uri, version, httpMethod, restliMethod, HttpStatus.S_400_BAD_REQUEST);
   }
@@ -2473,6 +2496,18 @@ public class TestRestLiRouting
                 "DELETE",
                 "CREATE"
             },
+            {
+                "/statuses?ids=List(NONE)",
+                AllProtocolVersions.RESTLI_PROTOCOL_2_0_0.getProtocolVersion(),
+                "DELETE",
+                "CREATE"
+            },
+            {
+                "/statuses?ids=List(1,2,3,NONE)",
+                AllProtocolVersions.RESTLI_PROTOCOL_2_0_0.getProtocolVersion(),
+                "DELETE",
+                "CREATE"
+            },
         };
   }
 
@@ -2485,7 +2520,7 @@ public class TestRestLiRouting
             FollowsAssociativeResource.class,
             RepliesCollectionResource.class);
 
-    _router = new RestLiRouter(pathRootResourceMap);
+    _router = new RestLiRouter(pathRootResourceMap, new RestLiConfig());
 
     expectRoutingExceptionWithStatus(uri, version, httpMethod, restliMethod, HttpStatus.S_400_BAD_REQUEST);
   }
@@ -2583,7 +2618,7 @@ public class TestRestLiRouting
   {
     Map<String, ResourceModel> pathRootResourceMap = buildResourceModels(
       CombinedResources.CombinedNKeyAssociationResource.class);
-    _router = new RestLiRouter(pathRootResourceMap);
+    _router = new RestLiRouter(pathRootResourceMap, new RestLiConfig());
 
     checkResult(uri,
                 version,
@@ -2604,7 +2639,7 @@ public class TestRestLiRouting
     CompoundKey key2 = new CompoundKey();
     key2.append("foo", "2,1").append("bar", "2;2");
 
-    Set<CompoundKey> keys = new HashSet<CompoundKey>();
+    Set<CompoundKey> keys = new HashSet<>();
     keys.add(key1);
     keys.add(key2);
 
@@ -2639,7 +2674,7 @@ public class TestRestLiRouting
   {
     Map<String, ResourceModel> pathRootResourceMap = buildResourceModels(
       CombinedResources.CombinedNKeyAssociationResource.class);
-    _router = new RestLiRouter(pathRootResourceMap);
+    _router = new RestLiRouter(pathRootResourceMap, new RestLiConfig());
 
     checkResult(uri,
                 version,
@@ -2657,22 +2692,27 @@ public class TestRestLiRouting
   {
     return new Object[][]
       {
-        { AllProtocolVersions.RESTLI_PROTOCOL_1_0_0.getProtocolVersion(), "/accounts?action=register" },
-        { AllProtocolVersions.RESTLI_PROTOCOL_2_0_0.getProtocolVersion(), "/accounts?action=register" }
+        { AllProtocolVersions.RESTLI_PROTOCOL_1_0_0.getProtocolVersion(), "/accounts?action=register", "register" },
+        { AllProtocolVersions.RESTLI_PROTOCOL_2_0_0.getProtocolVersion(), "/accounts?action=register", "register"},
+        { AllProtocolVersions.RESTLI_PROTOCOL_2_0_0.getProtocolVersion(),
+            "/accounts?action=noOps&q=some_q_argument&bq=some_bq_argument",
+            "noOps" }
       };
   }
 
   @Test(dataProvider = TestConstants.RESTLI_PROTOCOL_1_2_PREFIX + "actionRootRouting")
-  public void testActionRootRouting(ProtocolVersion version, String uri) throws Exception
+  public void testActionRootRouting(ProtocolVersion version, String uri, String actionName) throws Exception
   {
     Map<String, ResourceModel> pathRootResourceMap = buildResourceModels(TwitterAccountsResource.class);
-    _router = new RestLiRouter(pathRootResourceMap);
+    _router = new RestLiRouter(pathRootResourceMap, new RestLiConfig());
 
     RestRequest request = createRequest(uri, "POST", version);
-    RoutingResult result = _router.process(request, new RequestContext());
-    assertNotNull(result);
-    assertEquals(result.getResourceMethod().getActionName(), "register");
-    assertEquals(result.getResourceMethod().getType(), ResourceMethod.ACTION);
+    ServerResourceContext context = new ResourceContextImpl(new PathKeysImpl(), request, new RequestContext());
+    ResourceMethodDescriptor method = _router.process(context);
+
+    assertNotNull(method);
+    assertEquals(method.getActionName(), actionName);
+    assertEquals(method.getType(), ResourceMethod.ACTION);
   }
 
   @DataProvider(name = TestConstants.RESTLI_PROTOCOL_1_2_PREFIX + "actionNestedRouting")
@@ -2691,14 +2731,16 @@ public class TestRestLiRouting
     Map<String, ResourceModel> pathRootResourceMap =
       buildResourceModels(StatusCollectionResource.class,
                           RepliesCollectionResource.class);
-    _router = new RestLiRouter(pathRootResourceMap);
+    _router = new RestLiRouter(pathRootResourceMap, new RestLiConfig());
 
     RestRequest request = createRequest(uri, "POST", version);
-    RoutingResult result = _router.process(request, new RequestContext());
-    assertNotNull(result);
-    assertEquals(result.getResourceMethod().getActionName(), "replyToAll");
-    assertEquals(result.getResourceMethod().getType(), ResourceMethod.ACTION);
-    assertEquals(result.getContext().getPathKeys().get("statusID"), Long.valueOf(1));
+    ServerResourceContext context = new ResourceContextImpl(new PathKeysImpl(), request, new RequestContext());
+    ResourceMethodDescriptor method = _router.process(context);
+
+    assertNotNull(method);
+    assertEquals(method.getActionName(), "replyToAll");
+    assertEquals(method.getType(), ResourceMethod.ACTION);
+    assertEquals(context.getPathKeys().get("statusID"), Long.valueOf(1));
   }
 
   @DataProvider(name = TestConstants.RESTLI_PROTOCOL_1_2_PREFIX + "actionNestedSimpleRouting")
@@ -2717,15 +2759,17 @@ public class TestRestLiRouting
     Map<String, ResourceModel> pathRootResourceMap =
       buildResourceModels(StatusCollectionResource.class,
                           LocationResource.class);
-    _router = new RestLiRouter(pathRootResourceMap);
+    _router = new RestLiRouter(pathRootResourceMap, new RestLiConfig());
 
     RestRequest request = createRequest(uri, "POST", version);
-    RoutingResult result = _router.process(request, new RequestContext());
-    assertNotNull(result);
-    assertEquals(result.getResourceMethod().getActionName(), "new_status_from_location");
-    assertEquals(result.getResourceMethod().getType(), ResourceMethod.ACTION);
-    assertEquals(result.getResourceMethod().getMethod().getParameterTypes(), new Class<?>[] { String.class });
-    assertEquals(result.getContext().getPathKeys().get("statusID"), Long.valueOf(1));
+    ServerResourceContext context = new ResourceContextImpl(new PathKeysImpl(), request, new RequestContext());
+    ResourceMethodDescriptor method = _router.process(context);
+
+    assertNotNull(method);
+    assertEquals(method.getActionName(), "new_status_from_location");
+    assertEquals(method.getType(), ResourceMethod.ACTION);
+    assertEquals(method.getMethod().getParameterTypes(), new Class<?>[] { String.class });
+    assertEquals(context.getPathKeys().get("statusID"), Long.valueOf(1));
   }
 
   @DataProvider(name = TestConstants.RESTLI_PROTOCOL_1_2_PREFIX + "routingErrors")
@@ -2781,6 +2825,8 @@ public class TestRestLiRouting
         { "/statuses/1/badpath/2", AllProtocolVersions.RESTLI_PROTOCOL_2_0_0.getProtocolVersion(), "GET", HttpStatus.S_404_NOT_FOUND },
         { "/statuses?q=wrong&keywords=linkedin", AllProtocolVersions.RESTLI_PROTOCOL_1_0_0.getProtocolVersion(), "GET", HttpStatus.S_400_BAD_REQUEST },
         { "/statuses?q=wrong&keywords=linkedin", AllProtocolVersions.RESTLI_PROTOCOL_2_0_0.getProtocolVersion(), "GET", HttpStatus.S_400_BAD_REQUEST },
+        { "/statuses?q=wrong&bq=batchFindByAction", AllProtocolVersions.RESTLI_PROTOCOL_1_0_0.getProtocolVersion(), "GET", HttpStatus.S_400_BAD_REQUEST },
+        { "/statuses?q=wrong&bq=batchFindByAction", AllProtocolVersions.RESTLI_PROTOCOL_2_0_0.getProtocolVersion(), "GET", HttpStatus.S_400_BAD_REQUEST },
         { "/statuses?q=wrong&keywords=linkedin", AllProtocolVersions.RESTLI_PROTOCOL_1_0_0.getProtocolVersion(), "PUT", HttpStatus.S_400_BAD_REQUEST },
         { "/statuses?q=wrong&keywords=linkedin", AllProtocolVersions.RESTLI_PROTOCOL_2_0_0.getProtocolVersion(), "PUT", HttpStatus.S_400_BAD_REQUEST },
         { "/statuses?q=wrong&keywords=linkedin", AllProtocolVersions.RESTLI_PROTOCOL_1_0_0.getProtocolVersion(), "DELETE", HttpStatus.S_400_BAD_REQUEST },
@@ -2910,7 +2956,7 @@ public class TestRestLiRouting
                           TrendRegionsCollectionResource.class,
                           TrendingResource.class,
                           TwitterAccountsResource.class);
-    _router = new RestLiRouter(pathRootResourceMap);
+    _router = new RestLiRouter(pathRootResourceMap, new RestLiConfig());
 
     expectRoutingExceptionWithStatus(uri, version, httpMethod, null, status);
   }
@@ -2924,7 +2970,7 @@ public class TestRestLiRouting
                            String methodName,
                            boolean hasBatchKeys,
                            String... expectedPathKeys)
-          throws URISyntaxException
+      throws URISyntaxException, RestLiSyntaxException
   {
     RestRequestBuilder builder = createRequestBuilder(uri, httpMethod, version);
     if (restliMethod != null)
@@ -2932,17 +2978,18 @@ public class TestRestLiRouting
       builder.setHeader("X-RestLi-Method", restliMethod);
     }
     RestRequest request = builder.build();
-    RoutingResult result = _router.process(request, new RequestContext());
+    ServerResourceContext context = new ResourceContextImpl(new PathKeysImpl(), request, new RequestContext());
+    ResourceMethodDescriptor methodDescriptor = _router.process(context);
 
-    assertEquals(result.getResourceMethod().getType(), method);
-    assertEquals(result.getResourceMethod().getResourceModel().getResourceClass(), resourceClass);
-    assertEquals(result.getResourceMethod().getMethod().getName(), methodName);
+    assertEquals(methodDescriptor.getType(), method);
+    assertEquals(methodDescriptor.getResourceModel().getResourceClass(), resourceClass);
+    assertEquals(methodDescriptor.getMethod().getName(), methodName);
     // If hasBatchKeys, there are batch keys in the context, and if not, there are none.
-    assertEquals(hasBatchKeys, result.getContext().getPathKeys().getBatchIds() != null);
+    assertEquals(hasBatchKeys, context.getPathKeys().getBatchIds() != null);
 
     for (String pathKey : expectedPathKeys)
     {
-      assertNotNull(result.getContext().getPathKeys().get(pathKey));
+      assertNotNull(context.getPathKeys().get(pathKey));
     }
     if (method != null)
     {
@@ -2950,15 +2997,18 @@ public class TestRestLiRouting
       switch (method)
       {
         case ACTION:
-          expectedOperationName = "action:" + result.getResourceMethod().getActionName();
+          expectedOperationName = "action:" + methodDescriptor.getActionName();
           break;
         case FINDER:
-          expectedOperationName = "finder:" + result.getResourceMethod().getFinderName();
+          expectedOperationName = "finder:" + methodDescriptor.getFinderName();
+          break;
+        case BATCH_FINDER:
+          expectedOperationName = "batch_finder:" + methodDescriptor.getBatchFinderName();
           break;
         default:
           expectedOperationName = method.toString().toLowerCase();
       }
-      assertEquals(result.getContext().getRawRequestContext().getLocalAttr(R2Constants.OPERATION),
+      assertEquals(context.getRawRequestContext().getLocalAttr(R2Constants.OPERATION),
                    expectedOperationName);
     }
   }
@@ -2971,7 +3021,7 @@ public class TestRestLiRouting
                            String methodName,
                            boolean hasBatchKeys,
                            String... expectedPathKeys)
-      throws URISyntaxException
+      throws URISyntaxException, RestLiSyntaxException
   {
     checkResult(uri,
                 version,
@@ -2988,11 +3038,12 @@ public class TestRestLiRouting
                               ProtocolVersion version,
                               String httpMethod,
                               Set<?> expectedBatchKeys)
-      throws URISyntaxException
+      throws URISyntaxException, RestLiSyntaxException
   {
     RestRequest request = createRequest(uri, httpMethod, version);
-    RoutingResult result = _router.process(request, new RequestContext());
-    Set<?> batchKeys = result.getContext().getPathKeys().getBatchIds();
+    ServerResourceContext context = new ResourceContextImpl(new PathKeysImpl(), request, new RequestContext());
+    _router.process(context);
+    Set<?> batchKeys = context.getPathKeys().getBatchIds();
     assertEquals(batchKeys, expectedBatchKeys);
   }
 
@@ -3000,7 +3051,8 @@ public class TestRestLiRouting
                                                 ProtocolVersion version,
                                                 String httpMethod,
                                                 String restliMethod,
-                                                HttpStatus status) throws URISyntaxException
+                                                HttpStatus status)
+      throws URISyntaxException
   {
     RestRequestBuilder builder = createRequestBuilder(uri, httpMethod, version);
     if (restliMethod != null)
@@ -3010,8 +3062,16 @@ public class TestRestLiRouting
     RestRequest request = builder.build();
     try
     {
-      RoutingResult r = _router.process(request, new RequestContext());
-      fail("Expected RoutingException, got: " + r.toString());
+      try
+      {
+        ServerResourceContext context = new ResourceContextImpl(new PathKeysImpl(), request, new RequestContext());
+        ResourceMethodDescriptor method = _router.process(context);
+        fail("Expected RoutingException, got: " + method.toString());
+      }
+      catch (RestLiSyntaxException e)
+      {
+        throw new RoutingException(e.getMessage(), HttpStatus.S_400_BAD_REQUEST.getCode());
+      }
     }
     catch (RoutingException e)
     {
@@ -3048,17 +3108,17 @@ public class TestRestLiRouting
     Map<String, ResourceModel> pathRootResourceMap =
       buildResourceModels(CombinedResources.CombinedCollectionWithSubresources.class,
                           CombinedResources.SubCollectionResource.class);
-    _router = new RestLiRouter(pathRootResourceMap);
+    _router = new RestLiRouter(pathRootResourceMap, new RestLiConfig());
 
     RestRequest request;
-    RoutingResult result;
 
     // #1 simple GET
     request = createRequest(uri, "GET", version);
 
-    result = _router.process(request, new RequestContext());
-    assertNotNull(result);
-    PathKeys keys = result.getContext().getPathKeys();
+    ServerResourceContext context = new ResourceContextImpl(new PathKeysImpl(), request, new RequestContext());
+    ResourceMethodDescriptor method = _router.process(context);
+    assertNotNull(method);
+    PathKeys keys = context.getPathKeys();
     assertEquals(keys.getAsString("testId"), "foo");
     assertEquals(keys.getAsString("subId"), "bar");
   }
@@ -3071,5 +3131,87 @@ public class TestRestLiRouting
         { AllProtocolVersions.RESTLI_PROTOCOL_1_0_0.getProtocolVersion(), "/test/foo/sub/bar" },
         { AllProtocolVersions.RESTLI_PROTOCOL_2_0_0.getProtocolVersion(), "/test/foo/sub/bar" }
       };
+  }
+
+  @DataProvider(name =  TestConstants.RESTLI_PROTOCOL_1_2_PREFIX + "routingDetailsSimpleStreaming")
+  public Object[][] routingDetailsSimpleStreaming()
+  {
+    return new Object[][]
+        {
+            //No response attachments allowed but request attachments are present
+            { AllProtocolVersions.RESTLI_PROTOCOL_1_0_0.getProtocolVersion(), "/trending", "application/x-pson;q=1.0,application/json;q=0.9",
+                new RestLiAttachmentReader(null) },
+            { AllProtocolVersions.RESTLI_PROTOCOL_2_0_0.getProtocolVersion(), "/trending", "application/x-pson;q=1.0,*/*;q=0.9",
+                new RestLiAttachmentReader(null) },
+            { AllProtocolVersions.RESTLI_PROTOCOL_2_0_0.getProtocolVersion(), "/trending", "application/json;q=1.0,application/x-pson;q=0.9,*/*;q=0.8",
+                new RestLiAttachmentReader(null) },
+            { AllProtocolVersions.RESTLI_PROTOCOL_2_0_0.getProtocolVersion(), "/trending", "application/x-pson",
+                new RestLiAttachmentReader(null) },
+            { AllProtocolVersions.RESTLI_PROTOCOL_2_0_0.getProtocolVersion(), "/trending",
+                null, new RestLiAttachmentReader(null) },
+
+            //Response attachments allowed with a variety of different headers, but no request attachments present.
+            { AllProtocolVersions.RESTLI_PROTOCOL_1_0_0.getProtocolVersion(), "/trending", "multipart/related;q=1.0,application/x-pson;q=0.9,application/json;q=0.8", null },
+            { AllProtocolVersions.RESTLI_PROTOCOL_2_0_0.getProtocolVersion(), "/trending", "application/x-pson;q=1.0,multipart/related;q=0.9,*/*;q=0.8", null },
+            { AllProtocolVersions.RESTLI_PROTOCOL_2_0_0.getProtocolVersion(), "/trending", "application/json;q=1.0,application/x-pson;q=0.9,*/*;q=0.8,multipart/related;q=0.7", null },
+            { AllProtocolVersions.RESTLI_PROTOCOL_2_0_0.getProtocolVersion(), "/trending", "application/x-pson,multipart/related", null },
+            { AllProtocolVersions.RESTLI_PROTOCOL_2_0_0.getProtocolVersion(), "/trending", "multipart/related", null },
+
+            //Response attachments allowed with a variety of different headers as well as request attachments present.
+            { AllProtocolVersions.RESTLI_PROTOCOL_1_0_0.getProtocolVersion(), "/trending", "multipart/related;q=1.0,application/x-pson;q=0.9,application/json;q=0.8",
+                new RestLiAttachmentReader(null) },
+            { AllProtocolVersions.RESTLI_PROTOCOL_2_0_0.getProtocolVersion(), "/trending", "application/x-pson;q=1.0,multipart/related;q=0.9,*/*;q=0.8",
+                new RestLiAttachmentReader(null) },
+            { AllProtocolVersions.RESTLI_PROTOCOL_2_0_0.getProtocolVersion(), "/trending", "application/json;q=1.0,application/x-pson;q=0.9,*/*;q=0.8,multipart/related;q=0.7",
+                new RestLiAttachmentReader(null) },
+            { AllProtocolVersions.RESTLI_PROTOCOL_2_0_0.getProtocolVersion(), "/trending", "application/x-pson,multipart/related",
+                new RestLiAttachmentReader(null) },
+            { AllProtocolVersions.RESTLI_PROTOCOL_2_0_0.getProtocolVersion(), "/trending", "multipart/related",
+                new RestLiAttachmentReader(null) },
+        };
+  }
+
+  //This test verifies that the router can create the correct resource context based on attachments being
+  //present in the request or an accept type indicating a desire to receive response attachments.
+  @Test(dataProvider = TestConstants.RESTLI_PROTOCOL_1_2_PREFIX + "routingDetailsSimpleStreaming")
+  public void testStreamingResourceContext(ProtocolVersion version, String uri, String acceptHeader,
+                                           RestLiAttachmentReader requestAttachments) throws Exception
+  {
+    Map<String, ResourceModel> pathRootResourceMap = buildResourceModels(TrendingResource.class);
+    _router = new RestLiRouter(pathRootResourceMap, new RestLiConfig());
+
+    final RestRequestBuilder requestBuilder = new RestRequestBuilder(new URI(uri)).setMethod("GET")
+        .setHeader(RestConstants.HEADER_RESTLI_PROTOCOL_VERSION, version.toString());
+
+    if (acceptHeader != null)
+    {
+      requestBuilder.setHeader(RestConstants.HEADER_ACCEPT, acceptHeader);
+    }
+
+    final RestRequest request = requestBuilder.build();
+
+    ServerResourceContext context = new ResourceContextImpl(new PathKeysImpl(), request, new RequestContext());
+    context.setRequestAttachmentReader(requestAttachments);
+    ResourceMethodDescriptor method = _router.process(context);
+
+    assertNotNull(method);
+
+    if (requestAttachments != null)
+    {
+      Assert.assertEquals(context.getRequestAttachmentReader(), requestAttachments);
+    }
+    else
+    {
+      Assert.assertNull(context.getRequestAttachmentReader());
+    }
+
+    if (acceptHeader != null && acceptHeader.contains("multipart/related"))
+    {
+      Assert.assertTrue(context.responseAttachmentsSupported());
+    }
+    else
+    {
+      Assert.assertFalse(context.responseAttachmentsSupported());
+    }
   }
 }
