@@ -26,6 +26,8 @@ import java.util.HashMap;
 import java.util.Map;
 import java.util.Stack;
 import java.util.StringTokenizer;
+import java.util.regex.Pattern;
+
 
 /**
  * <p>Parse boolean expression of {@link Predicate} names to a {@link Predicate}.</p>
@@ -44,12 +46,14 @@ import java.util.StringTokenizer;
  */
 public class PredicateExpressionParser
 {
+  private static final Pattern TRIMMER_PATTERN = Pattern.compile("\\s");
+
   public static Predicate parse(String expression)
   {
-    final Stack<Predicate> predicateStack = new Stack<Predicate>();
-    final Stack<Character> operatorStack = new Stack<Character>();
+    final Stack<Predicate> predicateStack = new Stack<>();
+    final Stack<Character> operatorStack = new Stack<>();
 
-    final String trimmedExpression = expression.replaceAll("\\s", "");
+    final String trimmedExpression = TRIMMER_PATTERN.matcher(expression).replaceAll("");
     final StringTokenizer tokenizer = new StringTokenizer(trimmedExpression, OPERATORS, true);
     boolean isTokenMode = true;
 
@@ -89,7 +93,7 @@ public class PredicateExpressionParser
       {
         try
         {
-          predicateStack.push(Class.forName(token).asSubclass(Predicate.class).newInstance());
+          predicateStack.push(Class.forName(token).asSubclass(Predicate.class).getDeclaredConstructor().newInstance());
         }
         catch (ClassCastException e)
         {
@@ -164,7 +168,7 @@ public class PredicateExpressionParser
 
   private static Predicate evaluateMultiaryOperator(Stack<Predicate> predicateStack, Stack<Character> operatorStack, char operator)
   {
-    final Deque<Predicate> predicateOperands = new ArrayDeque<Predicate>();
+    final Deque<Predicate> predicateOperands = new ArrayDeque<>();
     predicateOperands.addFirst(predicateStack.pop());
     predicateOperands.addFirst(predicateStack.pop());
 
@@ -186,7 +190,7 @@ public class PredicateExpressionParser
   }
 
   private static final String OPERATORS = "()!&|";
-  private static final Map<Character, Integer> OPERATOR_PRECEDENCE = new HashMap<Character, Integer>();
+  private static final Map<Character, Integer> OPERATOR_PRECEDENCE = new HashMap<>();
   static
   {
     OPERATOR_PRECEDENCE.put('(', 0);
